# text2qti

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
demo/: quiz.txt
make_gui_exe/: README.md  make_tk_exe.bat  text2qti_tk.pyw
text2qti/: __init__.py  cmdline.py  config.py  err.py  export.py  markdown.py  pymd_pandoc_attr.py  qti.py  quiz.py  unravel.py  version.py  xml_assessment.py  xml_assessment_meta.py  xml_imsmanifest.py
text2qti/gui/: tk.py
